lipu-nasin-pona: Sitelen Sitelen on top

--- a/lipu-nasin-pona/06.md
+++ b/lipu-nasin-pona/06.md
@@ -5,18 +5,26 @@ title: kon lupa nena
 status: done
 ---
 
-{:.loseta}
+kon lupa nena li moli ala.
+nimi ona li meli nasa.
+{:sitelen data-sitelen-ratio="0.5"}
+
+lupa pi meli nasa la nimi ni li mama sewi li mama ma.
+{:sitelen data-sitelen-ratio="5"}
+
+linja linja li sama awen.
+kepeken taso pali ala.
+{:sitelen data-sitelen-ratio="0.5"}
+
+{% include kasi-nav.html num=6 %}
+
 |:-:|-|-
 | 谷神不死     | kon lupa nena li moli ala.       | The valley spirit never dies.
 | 是谓玄牝     | nimi ona li meli nasa.           | It is called “the mysterious female.”
 | 玄牝之门     | lupa pi meli nasa la,            | The opening of the mysterious female
 | 是谓天地<!--之-->根 | nimi ni li mama sewi li mama ma. | Is called “the root of Heaven and Earth.”
-| 系系若存     | _linja linja li sama awen._      | Continuous, seeming to remain.
+| 系系若存     | _linja linja_ li sama awen.      | Continuous, seeming to remain.
 | 用之不勤     | kepeken taso pali ala.           | Use it without exertion.
-
--------
-{:#sitelen}
-
-{:sitelen data-sitelen-ratio="10"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
