--- a/lipu-nasin-pona/08.md
+++ b/lipu-nasin-pona/08.md
@@ -5,24 +5,25 @@ title: telo
 status: wip
 ---
 
-{:.loseta}
-|:-:|-|-
-| 上善若水               | pona sewi li sama e telo.            | The highest goodness is like water.
-| 水善利万物<wbr/>而不争 | telo li pona e ijo ale, li wile ala. | Water easily benefits all things without struggle.
-| 处众人之所恶         | ma pi jaki tan jan la: telo li ken lon ni. | Yet it abides in places that men hate.
-| 故几於道             | telo li sama e sewi Nasin.                 | Therefore it is like the Way.
-| 居善地               | awen pona li tan ma.                       | For dwelling, the Earth is good.
-| 心善渊               | pilin pona li tan suli.                    | For the mind, depth is good.
-| 与善仁               | pana pona li tan olin.                     | The goodness of giving is in the timing.
-| 言善信               | toki pona li tan sona.                     | The goodness of speech is in honesty.
-| 正善治               | _??_ pona li tan kulupu.                   | In government, self-mastery is good.
-| 事善能               | pali pona li tan ken.                      | In handling affairs, ability is good.
-| 动善时               | pali pona li tan tenpo.                    | [uninterpreted]
-| 夫唯不争<wbr/>故无尤 | jan li wile ala la: jan ante li _monsuta_ ala e ona. | If you do not wrangle, you will not be blamed.
-
--------
-{:#sitelen}
-
 {:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="8" -%}
+{%endcomment%}
+
+|:-:|-|-
+| 上善若水               | pona sewi li sama e telo.                            | The highest goodness is like water.
+| 水善利万物<wbr/>而不争 | telo li pona e ijo ale, li wile ala.                 | Water easily benefits all things without struggle.
+| 处众人之所恶           | ma jaki tan jan ale la: telo li ken awen lon ma ni.  | Yet it abides in places that men hate.
+| 故几於道               | telo li sama e sewi Nasin.                           | Therefore it is like the Way.
+| 居善地                 | awen pona li tan ma.                                 | For dwelling, the Earth is good.
+| 心善渊                 | pilin pona li tan suli.                              | For the mind, depth is good.
+| 与善仁                 | pana pona li tan olin.                               | The goodness of giving is in the timing.
+| 言善信                 | toki pona li tan sona.                               | The goodness of speech is in honesty.
+| 正善治                 | _??_ pona li tan kulupu.                             | In government, self-mastery is good.
+| 事善能                 | pali pona li tan ken.                                | In handling affairs, ability is good.
+| 动善时                 | pali pona li tan tenpo.                              | [uninterpreted]
+| 夫唯不争<wbr/>故无尤   | jan li wile ala la: jan ante li _monsuta_ ala e ona. | If you do not wrangle, you will not be blamed.
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
