--- a/lipu-nasin-pona/09.md
+++ b/lipu-nasin-pona/09.md
@@ -5,7 +5,10 @@ title: o weka jo
 status: wip
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+<!-- {% include kasi-nav.html num=5 %} -->
+
 |:-:|-|-
 | 持而盈之<wbr/>不如其已 | _jan li awen jo e ale la: pake li pona._                          | To hold until full is not as good as stopping.
 | 揣而锐之<wbr/>不可长保 | _jan li pali e kiki la: kiki ni li ken ala kiki tawa tenpo kama._ | An oversharpened sword cannot last long.
@@ -13,10 +16,6 @@ status: wip
 | 富贵而骄<wbr/>自遗其咎 | jan li toki tan suli pi ona la: _ona li weka tawa tenpo kama._    | Boasting of wealth and virtue brings your demise.
 | 功遂身退               | _pali pini_ la: o lape.                                           | After finishing the work, withdraw.
 | 天之道                 | ni li nasin sewi.                                                 | This is the Way of Heaven.
-
--------
-{:#sitelen}
-
-{:sitelen data-sitelen-ratio="1"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
