--- a/lipu-nasin-pona/11.md
+++ b/lipu-nasin-pona/11.md
@@ -5,28 +5,32 @@ title: lon ala
 status: done
 ---
 
-{:.loseta}
-|:-:|-|-
-| 三十辐<wbr/>共一毂   | linja mute li wan e sike pi tomo tawa.                           | Thirty spokes join together in the hub.
-| 当其无<wbr/>有车之用 | insa pi tomo tawa li ala. tan ni la, jan li kepeken e tomo tawa. | It is because of what is not there that the cart is useful.
-| 挺埴<wbr/>以为器     | pali e poki la, jan li kepeken ko.                               | Clay is formed into a vessel.
-| 当其无<wbr/>有器之用 | insa poki li ala. tan ni la, jan li kepeken e poki.              | It is because of its emptiness that the vessel is useful.
-| 凿户牖<wbr/>以为室   | pali e tomo la, jan li lupa e sinpin.                            | Cut doors and windows to make a room.
-| 当其无<wbr/>有室之用 | insa tomo li ala. tan ni la, jan li kepeken e tomo.              | It is because of its emptiness that the room is useful.
-| 故<wbr/>有之以为利   | _tan pona ona_ la, jan li kepeken e _ijo lon_.                   | Therefore, what is present is used for profit.
-| 无之以为用           | _tan pali ona_ la, jan li kepeken e _weka_.                      | But it is in absence that there is usefulness.
-
--------
-{:#sitelen}
-
 linja mute li wan e sike pi tomo tawa.
-insa pi tomo tawa li ala. tan ni la, jan li kepeken e tomo tawa.
-pali e poki la, jan li kepeken ko.
-insa poki li ala. tan ni la, jan li kepeken e poki.
-pali e tomo la, jan li lupa e sinpin.
-insa tomo li ala. tan ni la, jan li kepeken e tomo.
-tan pona ona la, jan li kepeken e ijo lon.
-tan pali ona la, jan li kepeken e weka.
+insa pi tomo tawa li ala.
 {:sitelen data-sitelen-ratio="0.5"}
+
+ni la jan li ken kepeken e tomo tawa.
+{:sitelen data-sitelen-ratio="1"}
+
+pali e poki la jan li kepeken ko.
+insa poki li ala. tan ni la, jan li ken kepeken e poki.
+pali e tomo la jan li lupa e sinpin.
+insa tomo li ala. tan ni la, jan li ken kepeken e tomo.
+tan pona ona la jan li kepeken e ijo lon.
+tan pali ona la jan li kepeken e weka.
+{:sitelen data-sitelen-ratio="1"}
+
+{% include kasi-nav.html num=11 %}
+
+|:-:|-|-
+| 三十辐<wbr/>共一毂   | linja mute li wan e sike pi tomo tawa.                       | Thirty spokes join together in the hub.
+| 当其无<wbr/>有车之用 | insa pi tomo tawa li ala. ni la, jan li kepeken e tomo tawa. | It is because of what is not there that the cart is useful.
+| 挺埴<wbr/>以为器     | pali e poki la, jan li ken kepeken ko.                       | Clay is formed into a vessel.
+| 当其无<wbr/>有器之用 | insa poki li ala. tan ni la, jan li ken kepeken e poki.      | It is because of its emptiness that the vessel is useful.
+| 凿户牖<wbr/>以为室   | pali e tomo la, jan li lupa e sinpin.                        | Cut doors and windows to make a room.
+| 当其无<wbr/>有室之用 | insa tomo li ala. tan ni la, jan li ken kepeken e tomo.      | It is because of its emptiness that the room is useful.
+| 故<wbr/>有之以为利   | _tan pona ona_ la, jan li kepeken e _ijo lon_.               | Therefore, what is present is used for profit.
+| 无之以为用           | _tan pali ona_ la, jan li kepeken e _weka_.                  | But it is in absence that there is usefulness.
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
