--- a/lipu-nasin-pona/14.md
+++ b/lipu-nasin-pona/14.md
@@ -5,7 +5,12 @@ title: nasin pi ken ala toki
 status: wip
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="0.5"}
+
+{%comment%}
+{% include "kasi-nav.html" num="14" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 视之不见             | o lukin e ona la, jan li ken ala lukin. | Look for it, it cannot be seen.
 | 名曰夷               | nimi ona li _..._                       | It is called the distant.
@@ -27,11 +32,6 @@ status: wip
 | 以御今之有     | jan li lawa e _tenpo ni_. | You can manage present existence
 | 能知古始       | o sona e open majuna. | And know the primordial beginning.
 | 是谓道纪       | nimi ni li open pi sewi Nasin. | This is called the very beginning thread of the Way.
-
--------
-{:#sitelen}
-
-...
-{:sitelen data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
