--- a/lipu-nasin-pona/15.md
+++ b/lipu-nasin-pona/15.md
@@ -5,7 +5,12 @@ title: linluwi nasa
 status: wip
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="15" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 古之<wbr/>善为士者 | sewi Nasin la, jan pi ken wawa… | The ancient masters of the Way
 | 微妙玄通     | … li _linluwi_ wawa nasa,       | Had subtle marvelous mystic penetration
@@ -25,11 +30,6 @@ status: wip
 | 不欲盈       | … li wile ala.                              | […] does not crave fulfillment.
 | 夫唯不盈     | jan pi wile ala…                            | Precisely because he does not crave fulfillment
 | 故能蔽不新成 | li ken _len_, li ken _wile ala e pali sin_. | He can be shattered[,] And do without quick restitution.
-
--------
-{:#sitelen}
-
-...
-{:sitelen data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
