--- a/lipu-nasin-pona/16.md
+++ b/lipu-nasin-pona/16.md
@@ -5,7 +5,12 @@ chapter: 16
 status: wip
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="16" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 致虚极                   | o tan e _weka_ mute.                | Effect vacuity to the extreme.
 | 守静笃                   | o awen e _lape_ lon.                | Keep stillness whole.
@@ -23,11 +28,6 @@ status: wip
 | 天乃道                   | sewi li nasin.                      | Heaven is the Way
 | 道乃久                   | sewi Nasin li tenpo ale.            | the Way is eternal.
 | 没身不殆                 | sijelo li moli la, jan li moli ala. | Though you lose the body, you do not die.
-
--------
-{:#sitelen}
-
-...
-{:sitelen data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
