--- a/lipu-nasin-pona/17.md
+++ b/lipu-nasin-pona/17.md
@@ -5,7 +5,12 @@ title: mi pali a
 status: done
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="17" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 太上下<wbr/>知有之 | lawa suli li sona e ona.                 | From great antiquity forth they have known and possessed it.
 | 其次亲<wbr/>而誉之 | jan anpa pi lawa suli li olin e ona.     | Those of the next level loved and praised it.
@@ -15,11 +20,6 @@ status: done
 | 悠兮其贵言             | o olin a e toki pona!                           | How careful she is with her precious words!
 | 功成事遂               | ona li pali pini la,                            | When her work is complete and her job is finished,
 | 百姓皆谓<wbr/>我自然   | jan ale li toki e ni: mi ale li pali a!         | Everybody says: “We did it!”
-
--------
-{:#sitelen}
-
-...
-{:sitelen data-sitelen-ratio="1"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
