--- a/lipu-nasin-pona/18.md
+++ b/lipu-nasin-pona/18.md
@@ -5,7 +5,12 @@ title: moli ...
 status: ready
 ---
 
-{:.loseta}
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{%comment%}
+{% include "kasi-nav.html" num="18" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 大道废   |  | When the great Way perishes
 | 有仁义   |  | There is humaneness and justice.
@@ -15,11 +20,6 @@ status: ready
 | 有孝慈   |  | There is filial piety and compassion.
 | 国家昏乱 |  | When the country is in chaos
 | 有忠臣   |  | Loyal ministers appear.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
