--- a/lipu-nasin-pona/19.md
+++ b/lipu-nasin-pona/19.md
@@ -5,20 +5,20 @@ title: len pona
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="19" -%}
+{%endcomment%}
+
 |:-:|-|-
-| 绝圣弃智<wbr/>民利百倍  |  | Get rid of “holiness” and abandon “wisdom” and the people will benefit a hundredfold.
-| 绝仁弃义<wbr/>民复孝慈  |  | Get rid of “humaneness” and abandon “rightness” and the people will return to filial piety and compassion.
-| 绝巧弃利<wbr/>盗贼无有  |  | Get rid of cleverness and abandon profit, and thieves and gangsters will not exist.
-| 此三者以为文不足  |  | Since the above three are merely words, they are not sufficient.
-| 故令有所属  |  | Therefore there must be something to include them all.
-| 见素抱朴  |  | See the origin and keep the non-differentiated state.
-| 少私寡欲  |  | Lessen selfishness and decrease desire.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+| 绝圣弃智<wbr/>民利百倍 |  | Get rid of “holiness” and abandon “wisdom” and the people will benefit a hundredfold.
+| 绝仁弃义<wbr/>民复孝慈 |  | Get rid of “humaneness” and abandon “rightness” and the people will return to filial piety and compassion.
+| 绝巧弃利<wbr/>盗贼无有 |  | Get rid of cleverness and abandon profit, and thieves and gangsters will not exist.
+| 此三者以为文不足       |  | Since the above three are merely words, they are not sufficient.
+| 故令有所属             |  | Therefore there must be something to include them all.
+| 见素抱朴               |  | See the origin and keep the non-differentiated state.
+| 少私寡欲               |  | Lessen selfishness and decrease desire.
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
