--- a/lipu-nasin-pona/20.md
+++ b/lipu-nasin-pona/20.md
@@ -5,7 +5,12 @@ title: jan lili sin pi uta...
 status: ready
 ---
 
-{:.loseta}
+{% comment %}
+{% include kasi-nav.html num=20 %}
+{% endcomment %}
+
+{:sitelen data-sitelen-ratio="1"}
+
 |:-:|-|-
 | 绝学无忧               |  | Get rid of “learning” and there will be no anxiety.
 | 唯之与阿<wbr/>相去几何 |  | How much difference is there between “yes” and “no”?
@@ -32,13 +37,6 @@ status: ready
 | 而我独顽似鄙           |  | I alone am as ignorant as a bumpkin.
 | 我独异于人             |  | I alone differ from people.
 | 而贵食母               |  | I enjoy being nourished by the mother.
-
-{% include kasi-nav.html num=20 %}
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
