--- a/lipu-nasin-pona/22.md
+++ b/lipu-nasin-pona/22.md
@@ -5,7 +5,12 @@ title: o jo e wan...
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="22" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 曲则全                     |  | The imperfect is completed.
 | 枉则直                     |  | The crooked is straightened.
@@ -21,11 +26,6 @@ status: ready
 | 夫唯不争<wbr/>故天下莫<wbr/>能与之争 |  | It is exactly because she does not contend, that nobody can contend with her.
 | 古之所谓<wbr/>曲则全者<wbr/>岂虚言哉 |  | How could the ancient saying, “The imperfect is completed” be regarded as empty talk?
 | 诚全而归之                           |  | Believe in the complete and return to it.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
