--- a/lipu-nasin-pona/23.md
+++ b/lipu-nasin-pona/23.md
@@ -4,7 +4,12 @@ chapter: 23
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{% comment %}
+{% include kasi-nav.html num=23 %}
+{% endcomment %}
+
 |:-:|-|-
 | 希言自然                 |  | To speak little is natural.
 | 故飘风不终朝             |  | Therefore a gale does not blow a whole morning
@@ -20,13 +25,6 @@ status: ready
 | 同于德者<wbr/>德亦乐得之 |  | Virtue accepts this accordance gladly.
 | 同于失者<wbr/>失亦乐得之 |  | Loss also accepts accordance gladly.
 | 信不足<wbr/>焉有不信焉   |  | If you are untrustworthy, people will not trust you.
-
-{% include kasi-nav.html num=23 %}
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
