--- a/lipu-nasin-pona/24.md
+++ b/lipu-nasin-pona/24.md
@@ -4,7 +4,12 @@ chapter: 24
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="24" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 企者不立         |  | Standing on tiptoe, you are unsteady.
 | 跨者不行         |  | Straddle-legged, you cannot go.
@@ -16,11 +21,6 @@ status: ready
 | 馀食赘行         |  | Leftover food and wasted action
 | 物或恶之         |  | And all things dislike them.
 | 故有道者不处     |  | Therefore the person of the Way does not act like this.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
