--- a/lipu-nasin-pona/25.md
+++ b/lipu-nasin-pona/25.md
@@ -4,7 +4,12 @@ chapter: 25
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="25" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 有物混成                     |  | There is something that is perfect in its disorder
 | 先天地生                     |  | Which is born before Heaven and Earth.
@@ -24,11 +29,6 @@ status: ready
 | 地法天                       |  | Earth follows Heaven
 | 天法道                       |  | Heaven follows the Way
 | 道法自然                     |  | The Way follows things as they are.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
