--- a/lipu-nasin-pona/27.md
+++ b/lipu-nasin-pona/27.md
@@ -4,7 +4,12 @@ chapter: 27
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="27" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 善行无辙迹               |  | A good traveler leaves no tracks.
 | 善言无瑕谪               |  | Good speech lacks faultfinding.
@@ -21,11 +26,6 @@ status: ready
 | 不贵其师<wbr/>不爱其资   |  | Not valuing your teacher or not loving your students:
 | 虽智大迷                 |  | Even if you are smart, you are gravely in error.
 | 是谓要妙                 |  | This is called Essential Subtlety.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
