--- a/lipu-nasin-pona/28.md
+++ b/lipu-nasin-pona/28.md
@@ -4,7 +4,12 @@ chapter: 28
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="28" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 知其雄<wbr/>守其雌     |  | Know the Masculine, cleave to the Feminine
 | 为天下溪               |  | Be a valley for everyone.
@@ -24,13 +29,8 @@ status: ready
 | 朴散则为器             |  | The block is cut into implements.
 | 圣人用之<wbr/>则为官长 |  | If the sage uses it, he ends up being an official.
 | 故大制不割             |  | Therefore the great tailor does not cut.
+{:.loseta}
 
 [^1]: [Miller:] The “black” is the deep, religious, mystic part of our experience. The “white” is our involvement in mundane affairs. We should well understand how the conventional world operates, but our priority should lie in adhering to deeper principles.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
 
 {% include sitelen-sitelen-renderer.html %}
