--- a/lipu-nasin-pona/30.md
+++ b/lipu-nasin-pona/30.md
@@ -4,7 +4,12 @@ chapter: 30
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="30" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 以道佐人主者 |  | If you used the Way as a principle for ruling
 | 不以兵强天下 |  | You would not dominate the people by military force.
@@ -23,11 +28,6 @@ status: ready
 | 物壮则老     |  | When things flourish they decline.
 | 是谓不道     |  | This is called non-Way
 | 不道早已     |  | The non-Way is short-lived.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
