--- a/lipu-nasin-pona/31.md
+++ b/lipu-nasin-pona/31.md
@@ -4,7 +4,12 @@ chapter: 31
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="31" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 夫佳兵者<wbr/>不祥之器     |  | Sharp weapons are inauspicious instruments.
 | 物或恶之                   |  | Everyone hates them.
@@ -28,11 +33,6 @@ status: ready
 | 杀人之众                   |  | The common people, from whom all the dead have come
 | 以哀悲泣之                 |  | Weep in lamentation.
 | 战胜以丧礼处之             |  | The victors bury them with funerary rites.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
