--- a/lipu-nasin-pona/33.md
+++ b/lipu-nasin-pona/33.md
@@ -5,21 +5,29 @@ title: sona mi...
 status: wip
 ---
 
-{:.loseta}
+sina ken sona e jan ante la sina sona.
+sina ken sona e sina la sina suno.
+sina ken utala e jan ante la sina suli.
+sina ken utala e sina la sina wawa.
+sina ken sona e sina la sina jo e mani.
+sina pali pona la sina jo e wile sina.
+sina o weka ala e wile sina la tenpo sina li suli.
+sina moli li weka ala la tenpo sina li ale.
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="33" -%}
+{%endcomment%}
+
 |:-:|-|-
-| 知人者智     | sina ken sona e jan ante la, sina sona. | If you understand others[,]<wbr/> you are smart.
-| 自知者明     | sina ken sona e sina la, sina suno. | If you understand yourself[,]<wbr/> you are illuminated.
-| 胜人者有力   | sina ken utala e jan ante la, sina wawa. | If you overcome others[,]<wbr/> you are powerful.
-| 自胜者强     | sina ken utala e sina la, sina suli. | If you overcome yourself[,]<wbr/> you have strength.
-| 知足者富     |  | If you know how to be satisfied[,]<wbr/> you are rich.
-| 强行者有志   |  | If you can act with vigor,<wbr/> you have a will.
-| 不失其所者久 |  | If you don't lose your objectives[,]<wbr/> you can be long-lasting.
-| 死而不亡者寿 |  | If you die without loss,<wbr/> you are eternal.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+| 知人者智   | sina ken sona e jan ante la, sina sona.  | If you understand others[,]<wbr/> you are smart.
+| 自知者明   | sina ken sona e sina la, sina suno.      | If you understand yourself[,]<wbr/> you are illuminated.
+| 胜人者有力 | sina ken utala e jan ante la, sina suli. | If you overcome others[,]<wbr/> you are powerful.
+| 自胜者强   | sina ken utala e sina la, sina wawa.     | If you overcome yourself[,]<wbr/> you have strength.
+| 知足者富     | sina ken sona e sina la, sina jo e mani.            | If you know how to be satisfied[,]<wbr/> you are rich.
+| 强行者有志   | sina _pali pona_ la, sina jo e wile sina.           | If you can act with vigor,<wbr/> you have a will.
+| 不失其所者久 | sina o weka ala e wile sina la, tenpo sina li suli. | If you don't lose your objectives[,]<wbr/> you can be long-lasting.
+| 死而不亡者寿 | sina moli li weka ala la, tenpo sina li ale.        | If you die without loss,<wbr/> you are eternal.
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
