--- a/lipu-nasin-pona/34.md
+++ b/lipu-nasin-pona/34.md
@@ -4,7 +4,12 @@ chapter: 34
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="34" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 大道泛兮<wbr/>其可左右   |  | The great Way flows over, spreading in every direction.
 | 万物恃之<wbr/>而生而不辞 |  | The myriad things are produced relying on it, but it does not distinguish them.
@@ -15,11 +20,6 @@ status: ready
 | 可名为大                 |  | Thus it can be called “great.”
 | 以其终不自为大           |  | Till the end, it does not regard itself as Great.
 | 故能成其大               |  | Therefore it able to be great.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
