--- a/lipu-nasin-pona/35.md
+++ b/lipu-nasin-pona/35.md
@@ -4,7 +4,12 @@ chapter: 35
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="35" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 执大象               |  | Grasping to the Great Form
 | 天下往               |  | All in the world go proceed forth. [^1]
@@ -15,13 +20,8 @@ status: ready
 | 视之<wbr/>不足见     |  | Look at it, you cannot see it.
 | 听之<wbr/>不足闻     |  | Listen, you cannot hear it.
 | 用之<wbr/>不可既     |  | Use it[, y]ou cannot exhaust it.
+{:.loseta}
 
 [^1]: [Miller:] "As far as I can tell, I am the only translator who takes 往 as “going forth” rather than “come.” Where in any other text do we see the rendering of “come”? I take it to mean that if people will hold on to the Dao as they go out in the world, they won't have trouble, and will enjoy peace and calm. This seems to accord with the general message of the Daodejing."
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
 
 {% include sitelen-sitelen-renderer.html %}
