--- a/lipu-nasin-pona/37.md
+++ b/lipu-nasin-pona/37.md
@@ -4,7 +4,12 @@ chapter: 37
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="37" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 道常无为 |  | The Way is always “not-doing”
 | 而无不为 |  | Yet there is nothing it doesn't do.
@@ -16,11 +21,6 @@ status: ready
 | 夫亦将无欲 |  | They become desireless.
 | 不欲以静 |  | Desireless, they are tranquil and
 | 天下将自定 |  | All-under-Heaven is naturally settled.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
