--- a/lipu-nasin-pona/38.md
+++ b/lipu-nasin-pona/38.md
@@ -5,7 +5,12 @@ title: kili en ala kasi kule
 status: wip
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="0.5"}
+
+{%comment%}
+{% include "kasi-nav.html" num="38" -%}
+{%endcomment%}
+
 |-:|:-:|:-
 | 上德不德               | pona _sewi_ li pona ala la, | Superior virtue is not virtuous
 | 是以有德               | ona li jo e pona.           | Therefore it has virtue.
@@ -33,11 +38,6 @@ status: wip
 | 不居其薄               |  | And not in the superficial.
 | 处其实<wbr/>不居其华   |  | Rests in the fruit and not in the flower.
 | 故去彼取此             | la o weka. o jo e ni. | So let go of that and grasp this.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
