--- a/lipu-nasin-pona/39.md
+++ b/lipu-nasin-pona/39.md
@@ -4,7 +4,12 @@ chapter: 39
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="39" -%}
+{%endcomment%}
+
 |-:|:-:|:-
 | 昔之得一者               |  | These in the past have attained wholeness:
 | 天得一以清               |  | Heaven attains wholeness with its clarity;
@@ -28,11 +33,6 @@ status: ready
 | 故<wbr/>致数誉无誉       |  | In this way you can bring about great effect without burden.
 | 不欲琭琭如玉             |  | Not desiring the rarity of gems
 | 珞珞如石                 |  | Or the manyness of grains of sand.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
