--- a/lipu-nasin-pona/40.md
+++ b/lipu-nasin-pona/40.md
@@ -4,17 +4,17 @@ chapter: 40
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="40" -%}
+{%endcomment%}
+
 |:-:|-|-
-| 反者道之动     |  | Return is the motion of the Way.
-| 弱者道之用     |  | Softening is its function.
-| 天下万物<wbr/>生于有 |  | All things in the cosmos arise from being.
-| 有生于无       |  | Being arises from non-being.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+| 反者道之动           |  | Return is the motion of the Way.
+| 弱者道之用           |  | Softening is its function.
+| 天下万物<wbr/>生于有 | ijo ale li mama tan _..._ | All things in the cosmos arise from being.
+| 有生于无             |  | Being arises from non-being.
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
