--- a/lipu-nasin-pona/41.md
+++ b/lipu-nasin-pona/41.md
@@ -4,7 +4,12 @@ chapter: 41
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="41" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 上士闻道 |  | When superior students hear of the Way
 | 勤而行之 |  | They strive to practice it.
@@ -27,11 +32,6 @@ status: ready
 | 大象无形 |  | The great form has no shape.
 | 道隐无名 |  | The Way is hidden and nameless.
 | 夫唯道<wbr/>善贷且成 |  | This is exactly why the Way is good at developing and perfecting.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
