--- a/lipu-nasin-pona/42.md
+++ b/lipu-nasin-pona/42.md
@@ -5,7 +5,12 @@ title: wan en tu en mute
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="42" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 道生一<wbr/>一生二   | sewi Nasin li mama e wan. wan ni li mama e tu.   | The Way produces one, one produces two.
 | 二生三<wbr/>三生万物 | tu ni li mama e mute. mute ni li mama e ilo ale. | The two produce the three and the three produce all things.
@@ -20,11 +25,6 @@ status: ready
 | 我亦教之             |  | I also teach:
 | 强梁者不得其死       |  | “The forceful do not choose their place of death.”
 | 吾将以为教父         |  | I regard this as the father of all teachings.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
