--- a/lipu-nasin-pona/43.md
+++ b/lipu-nasin-pona/43.md
@@ -4,7 +4,12 @@ chapter: 43
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="43" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 天下之至柔             |  | The softest thing in the world
 | 驰骋<wbr/>天下之至坚   |  | Will overcome the hardest.
@@ -12,11 +17,6 @@ status: ready
 | 吾是以知无为之有益     |  | Therefore I know the benefit of unattached-action.
 | 不言之教<wbr/>无为之益 |  | The wordless teaching and unattached-action
 | 天下希及之             |  | Are rarely seen.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
