--- a/lipu-nasin-pona/44.md
+++ b/lipu-nasin-pona/44.md
@@ -4,7 +4,12 @@ chapter: 44
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="44" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 名与身孰亲     |  | Which is dearer, fame or your life?
 | 身与货孰多     |  | Which is greater, your life or possessions?
@@ -14,11 +19,6 @@ status: ready
 | 知足不辱       |  | Knowing what is enough, you will not be humiliated.
 | 知止不殆       |  | Knowing where to stop, you will not be imperiled
 | 可以长久       |  | And can be long-lasting.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
