--- a/lipu-nasin-pona/45.md
+++ b/lipu-nasin-pona/45.md
@@ -4,7 +4,12 @@ chapter: 45
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="45" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 大成若缺<wbr/>其用不弊 |  | Great perfection seems flawed, yet functions without a hitch.
 | 大盈若冲<wbr/>其用不穷 |  | Great fullness seems empty, yet functions without exhaustion.
@@ -13,11 +18,6 @@ status: ready
 | 大辩若讷               |  | Great eloquence seems stammering.
 | 躁胜寒静胜热           |  | Excitement overcomes cold, stillness overcomes heat.
 | 清静为天下正           |  | Clarity and stillness set everything right.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
