--- a/lipu-nasin-pona/46.md
+++ b/lipu-nasin-pona/46.md
@@ -4,7 +4,12 @@ chapter: 46
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="46" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 天下有道       |  | When the Way prevails in the land
 | 却走马以粪     |  | Fine horses leisurely graze and fertilize the ground.
@@ -13,11 +18,6 @@ status: ready
 | 祸莫大于不知足 |  | There is no greater disaster as bad as not knowing what is enough.
 | 咎莫大于欲得   |  | No greater than not wanting more.
 | 故知足之足<wbr/>常足矣 |  | Therefore the sufficiency that comes from knowing what is enough is an eternal sufficiency.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
