--- a/lipu-nasin-pona/47.md
+++ b/lipu-nasin-pona/47.md
@@ -4,7 +4,12 @@ chapter: 47
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="47" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 不出户知天下 |  | Without going out the door, knowing everything,
 | 不闚牖见天道 |  | Without peeking out the window shades, seeing the Way of Heaven.
@@ -13,13 +18,8 @@ status: ready
 | 不行而知 |  | Understands without having to go through the whole process.
 | 不见而名 |  | Discerns [^1] without looking.
 | 不为而成 |  | Is perfected without striving.
+{:.loseta}
 
 [^1]: Miller: "The commentarial tradition reads 名 as meaning 明."
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
 
 {% include sitelen-sitelen-renderer.html %}
