--- a/lipu-nasin-pona/48.md
+++ b/lipu-nasin-pona/48.md
@@ -4,7 +4,12 @@ chapter: 48
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="48" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 为学日益       |  | In studying, each day something is gained.
 | 为道日损       |  | In following the Way, each day something is lost.
@@ -14,11 +19,6 @@ status: ready
 | 取天下常以无事 |  | You can possess the world by never manipulating it.
 | 及其有事       |  | No matter how much you manipulate
 | 不足以取天下   |  | You can never possess the world.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
