--- a/lipu-nasin-pona/49.md
+++ b/lipu-nasin-pona/49.md
@@ -4,7 +4,12 @@ chapter: 49
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="49" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 圣人无常心     |  | The sage has no fixed mind,
 | 以百姓心为心   |  | She takes the mind of the people as her mind.
@@ -15,11 +20,6 @@ status: ready
 | 圣人在天下<wbr/>歙歙为天下浑其心 |  | When the sage lives with people, she harmonizes with them
 | 百姓皆注其耳目 |  | And conceals her mind for them.
 | 圣人皆孩之     |  | The sages treat them as their little children.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
