--- a/lipu-nasin-pona/51.md
+++ b/lipu-nasin-pona/51.md
@@ -4,7 +4,12 @@ chapter: 51
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="51" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 道生之                                 |  | Way gives birth to it,
 | 德畜之                                 |  | Virtue rears it,
@@ -19,11 +24,6 @@ status: ready
 | 为而不恃                               |  | Acts without expectation,
 | 长而不宰                               |  | Leads without forcing.
 | 是谓玄德                               |  | This is called “Mysterious Virtue.”
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
