--- a/lipu-nasin-pona/52.md
+++ b/lipu-nasin-pona/52.md
@@ -4,7 +4,12 @@ chapter: 52
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="52" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 天下有始<wbr/>以为天下母 |  | All things have a beginning, which we can regard as their Mother.
 | 既知其母<wbr/>以复其子   |  | Knowing the mother, we can know its children.
@@ -21,11 +26,6 @@ status: ready
 | 用其光<wbr/>复归其明     |  | Use the illumination, but return to the light.
 | 无遗身殃                 |  | Don't bring harm to yourself.
 | 是为习常                 |  | This is called “practicing the eternal.”
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
