--- a/lipu-nasin-pona/53.md
+++ b/lipu-nasin-pona/53.md
@@ -4,7 +4,12 @@ chapter: 53
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="53" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 使我介然有知 |  | If I had just a little bit of wisdom
 | 行于大道<wbr/>唯施是畏 |  | I should walk the Great Path and fear only straying from it.
@@ -19,11 +24,6 @@ status: ready
 | 财货有馀     |  | Having wealth in excess.
 | 是谓盗夸     |  | They are called thieving braggarts.
 | 非道也哉     |  | This is definitely not the Way.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
