--- a/lipu-nasin-pona/54.md
+++ b/lipu-nasin-pona/54.md
@@ -4,7 +4,12 @@ chapter: 54
 status: wip
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="54" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 善建不拔         |         | The well-established cannot be uprooted.
 | 善抱者不脱       |         | The well-grasped does not slip away.
@@ -21,11 +26,6 @@ status: wip
 | 以天下观天下     |         | Take the world and observe the world.
 | 吾何以知天下然哉 | seme la, mi sona e ijo ale? | How do I know the world as it is?
 | 以此             | tan ni.                     | By this.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
