--- a/lipu-nasin-pona/55.md
+++ b/lipu-nasin-pona/55.md
@@ -4,7 +4,12 @@ chapter: 55
 status: wip
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="55" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 含德之厚     | ona pi wawa pona...           | One who remains rich in virtuous power
 | 比于赤子     | li sama e jan lili sin.       | Is like a newborn baby.
@@ -26,11 +31,6 @@ status: wip
 | 物壮则老     |                               | After things blossom they decay, and
 | 谓之不道     |                               | This is called the non-Way.
 | 不道早已     |                               | The non-Way expires quickly.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
