--- a/lipu-nasin-pona/56.md
+++ b/lipu-nasin-pona/56.md
@@ -4,7 +4,12 @@ chapter: 56
 status: wip
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="56" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 知者不言           | jan sona li toki ala. | One who knows does not speak.
 | 言者不知           | jan toki li sona ala. | One who speaks does not know.
@@ -18,11 +23,6 @@ status: wip
 | 不可得而贵         |  | You cannot possess it, but are esteemed through it
 | 不可得而贱         |  | And [though you cannot possess it, you are] humbled by it.
 | 故为天下贵         |  | Therefore the world values you.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
