--- a/lipu-nasin-pona/57.md
+++ b/lipu-nasin-pona/57.md
@@ -4,7 +4,12 @@ chapter: 57
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="57" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 以正治国             |  | Use fairness in governing the state.
 | 以奇用兵             |  | Use surprise tactics in war.
@@ -24,11 +29,6 @@ status: ready
 | 我好静<wbr/>而民自正 |  | I enjoy my serenity and the people correct themselves.
 | 我无事<wbr/>而民自富 |  | I do not interfere and the people enrich themselves.
 | 我无欲<wbr/>而民自朴 |  | I have no desires<br/> And the people find their original mind.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
