--- a/lipu-nasin-pona/58.md
+++ b/lipu-nasin-pona/58.md
@@ -4,7 +4,12 @@ chapter: 58
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="58" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 其政闷闷     |  | When the government is laid back
 | 其民淳淳     |  | The people are relaxed.
@@ -21,11 +26,6 @@ status: ready
 | 廉而不刿     |  | Edges without separating.
 | 直而不肆     |  | Straightens without lining up.
 | 光而不耀     |  | Shines but does not glare.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
