--- a/lipu-nasin-pona/59.md
+++ b/lipu-nasin-pona/59.md
@@ -4,7 +4,12 @@ chapter: 59
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="59" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 治人事天             |  | In governing the country and serving Heaven
 | 莫若啬               |  | There is nothing like frugality.
@@ -19,11 +24,6 @@ status: ready
 | 有国之母<wbr/>可以长久 |  | The Mother who possesses the country can be long-living.
 | 是谓深根固柢         |  | This is called “planting the roots deeply and firmly.”
 | 长生久视之道         |  | The way to long life and eternal vision.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
