--- a/lipu-nasin-pona/60.md
+++ b/lipu-nasin-pona/60.md
@@ -4,7 +4,12 @@ chapter: 60
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="60" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 治大国若烹小鲜 |  | Governing a large country is like cooking a small fish. [^4]
 | 以道莅天下     |  | When you govern people with the Way
@@ -15,16 +20,11 @@ status: ready
 | 圣人亦不伤人   |  | The sage also doesn't harm people,
 | 夫两不相伤     |  | Since the two do not harm each other.
 | 故德交归焉     |  | Their virtue converges. [^7]
+{:.loseta}
 
 [^4]: [Muller:] "A small fish can be cooked without a great deal of preparation, cleaning, spicing, etc. Ruling with the Dao means ruling without interfering."
 [^5]: [Muller:] "Spirits of people who died early, in some unfortunate way, or without descendants, who mingle in the world and plague people."
 [^6]: [Muller:] "Translated elsewhere as “numinousity,” “spiritual power,” etc."
 [^7]: [Muller:] "The interpretation of this final line varies widely among translators; we decided to try to remain terse and close to the literal meaning here."
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
 
 {% include sitelen-sitelen-renderer.html %}
