--- a/lipu-nasin-pona/62.md
+++ b/lipu-nasin-pona/62.md
@@ -4,7 +4,12 @@ chapter: 62
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="62" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 道者万物之奥           |  | The Way is hidden deeply in all things.
 | 善人之宝               |  | It is the treasure of the good
@@ -19,11 +24,6 @@ status: ready
 | 不曰<wbr/>以求得       |  | You can't say that it was for seeking gain
 | 有罪以免耶             |  | Or to have punishments to deter crime.
 | 故为天下贵             |  | Therefore it is the most prized in the world.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
