--- a/lipu-nasin-pona/63.md
+++ b/lipu-nasin-pona/63.md
@@ -4,7 +4,12 @@ chapter: 63
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="63" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 为无为                 |  | Do without “doing.”
 | 事无事                 |  | Get involved without manipulating.
@@ -23,11 +28,6 @@ status: ready
 | 多易必多难             |  | Much ease turns into much difficulty.
 | 是以圣人<wbr/>犹难之   |  | Therefore the sage treats things as though they were difficult,
 | 故终无难矣             |  | And hence, never has difficulty.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
