--- a/lipu-nasin-pona/64.md
+++ b/lipu-nasin-pona/64.md
@@ -4,7 +4,12 @@ chapter: 64
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="64" -%}
+{%endcomment%}
+
 |-:|:-:|:-
 | 其安易持               |  | That which is at rest is easy to grasp.
 | 其未兆易谋             |  | That which has not yet come about is easy to plan for.
@@ -30,11 +35,6 @@ status: ready
 | 复众人之所过           |  | So that she can correct the mistakes of average people
 | 以辅万物之自然         |  | And aid all things in manifesting their true nature
 | 而不敢为               |  | Without presuming to take the initiative.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
