--- a/lipu-nasin-pona/65.md
+++ b/lipu-nasin-pona/65.md
@@ -4,7 +4,12 @@ chapter: 65
 status: wip
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="65" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 古之善为道者 |  | The ancients who were skillful at the Way
 | 非以明民     |  | Did not illuminate the people
@@ -21,11 +26,6 @@ status: wip
 | 玄德深矣<wbr/>远矣 | pona Nasa li suli mute a! | How deep and far-reaching Mysterious Virtue is!
 | 与物反矣           | ijo ale li sin kama.      | It makes all return
 | 然后乃至大顺       |                           | Until they reach the Great Norm.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
