--- a/lipu-nasin-pona/66.md
+++ b/lipu-nasin-pona/66.md
@@ -4,7 +4,12 @@ chapter: 66
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="66" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 江海所以能                 |  | The reason the river and sea can be regarded as
 | 为百谷王者                 |  | The rulers of all the valley streams
@@ -20,11 +25,6 @@ status: ready
 | 是以<wbr/>天下<wbr/>乐推而不厌 |  | Therefore they like to push him front and never resent him.
 | 以其不争                   |  | Since he does not contend
 | 故天下<wbr/>莫能与之争     |  | No one can contend with him.
-
-------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
