--- a/lipu-nasin-pona/67.md
+++ b/lipu-nasin-pona/67.md
@@ -4,7 +4,12 @@ chapter: 67
 status: wip
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="67" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 天下皆谓我道大   |  | The reason everybody calls my Way great
 | 似不肖           |  | Is because there is nothing quite like it.
@@ -28,11 +33,6 @@ status: wip
 | 以守则固         |  | If you protect yourself with compassion you will be impervious.
 | 天将救之         |  | Heaven will take care of you,
 | 以慈卫之         |  | Protecting you with compassion.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
