--- a/lipu-nasin-pona/68.md
+++ b/lipu-nasin-pona/68.md
@@ -5,7 +5,12 @@ title: wawa pi utala ala
 status: wip
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="68" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 善为士者<wbr/>不武   | _jan utala_ pona li utala ala.  | The best warrior is never aggressive.
 | 善战者<wbr/>不怒     | _jan utala_ pona li pilin ike ala. | The best fighter is never angry.
@@ -14,11 +19,6 @@ status: wip
 | 是谓<wbr/>不争之德   | nimi ni li pona Wile Ala. | This is called the virtue of non-contention.
 | 是谓<wbr/>用人之力   | nimi ni li wawa Pali Jan. | It is called the ability to engage people's talents.
 | 是谓<wbr/>配天古之极 | nimi ni li ______ Wan Sewi. | It is called the ultimate in merging with Heaven.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
