--- a/lipu-nasin-pona/70.md
+++ b/lipu-nasin-pona/70.md
@@ -4,25 +4,25 @@ chapter: 70
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="70" -%}
+{%endcomment%}
+
 |:-:|-|-
-| 吾言甚易知 |  | My words are easy to understand
-| 甚易行     |  | And easy to practice.
-| 天下莫能知 |  | Yet nobody understands them
-| 莫能行     |  | [O]r practices them.
-| 言有宗     |  | My words have an origin;
-| 事有君     |  | My actions have a principle.
-| 夫唯无知   |  | It is only because of your not understanding this
-| 是以不我知 |  | That you do not understand me.
-| 知我者希   |  | Since there are few who understand me
-| 则我者贵   |  | I am valued.
-| 是以<wbr/>圣人<wbr/>被褐 |  | Therefore the sage wears coarse clothes.
-| 怀玉       |  | Yet hides a jewel in his bosom.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+| 吾言甚易知               | toki mi la: jan ale li ken sona e ni, | My words are easy to understand
+| 甚易行                   | ...li ken pali e ni.                  | And easy to practice.
+| 天下莫能知               | taso jan ala li sona e ni,            | Yet nobody understands them
+| 莫能行                   | ...li pali e ni.                      | [O]r practices them.
+| 言有宗                   | toki li jo e tan.                     | My words have an origin;
+| 事有君                   | pali li jo e _kon_.                   | My actions have a principle.
+| 夫唯无知                 |                                       | It is only because of your not understanding this
+| 是以不我知               |                                       | That you do not understand me.
+| 知我者希                 |                                       | Since there are few who understand me
+| 则我者贵                 |                                       | I am valued.
+| 是以<wbr/>圣人<wbr/>被褐 |                                       | Therefore the sage wears coarse clothes.
+| 怀玉                     |                                       | Yet hides a jewel in his bosom.
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
