--- a/lipu-nasin-pona/71.md
+++ b/lipu-nasin-pona/71.md
@@ -4,7 +4,12 @@ chapter: 71
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="71" -%}
+{%endcomment%}
+
 |:-:|-|-
 |  |  | There is nothing better than to know that you don't know.
 | 知不知上<wbr/>不知知病 |  | Not knowing, yet thinking you know— This is sickness.
@@ -12,11 +17,6 @@ status: ready
 | 圣人不病               |  | The sage's not being sick
 | 以其病病               |  | Is because she is sick of sickness.
 | 是以不病               |  | Therefore she is not sick.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
