--- a/lipu-nasin-pona/73.md
+++ b/lipu-nasin-pona/73.md
@@ -4,7 +4,12 @@ chapter: 73
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="73" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 勇于敢则杀             |  | If you are courageous in daring you will die.
 | 勇于不敢则活           |  | If you are courageous in not-daring you will live.
@@ -17,11 +22,6 @@ status: ready
 | 繟然而善谋             |  | To plan well without anxiety.
 | 天网恢恢               |  | Heaven's net is vast.
 | 疏而不失               |  | It is loose. Yet nothing slips through.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
