--- a/lipu-nasin-pona/74.md
+++ b/lipu-nasin-pona/74.md
@@ -4,7 +4,12 @@ chapter: 74
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="74" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 民不畏死     |  | If the people don't fear death
 | 奈何以死惧之 |  | How will you scare them with death?
@@ -16,11 +21,6 @@ status: ready
 | 夫司杀者     |  | If you play the role of the official executioner
 | 是大匠斫<wbr/>夫代大匠斫者 |  | It is like cutting wood in the capacity of Master Carpenter.
 | 希有不伤其手矣 |  | There are few who will not cut their hands.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
