--- a/lipu-nasin-pona/75.md
+++ b/lipu-nasin-pona/75.md
@@ -4,7 +4,12 @@ chapter: 75
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="75" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 民之饥               |  | The reason people starve
 | 以其<wbr/>上食税之多 |  | Is because their rulers tax them excessively.
@@ -17,11 +22,6 @@ status: ready
 | 是以轻死             |  | Therefore they take death lightly.
 | 夫唯无以生为者       |  | It is only by not living for your own ends
 | 是贤于贵生           |  | That you can go beyond valuing life.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
