--- a/lipu-nasin-pona/76.md
+++ b/lipu-nasin-pona/76.md
@@ -5,7 +5,12 @@ title: suwi
 status: wip
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="76" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 人之生也柔弱       | jan li kama lon la, sijelo ona li kon li suwi.                | When people are born they are gentle and soft.
 | 其死也坚强         | jan li kama moli la, sijelo ona li kiwen li _palisa_.         | At death they are hard and stiff.
@@ -17,11 +22,6 @@ status: wip
 | 木强则共           |                                                               | When a tree is hard enough, it is cut. Therefore
 | 强大处下           | ona kiwen e ona suli li anpa.                                 | The hard and big are lesser,
 | 柔弱处上           | ona kon e ona suwi li wawa.                                   | The gentle and soft are greater.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
