--- a/lipu-nasin-pona/78.md
+++ b/lipu-nasin-pona/78.md
@@ -4,7 +4,12 @@ chapter: 78
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="78" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 天下莫柔弱于水     |  | Nothing in the world is softer than water,
 | 而攻坚强者莫之能胜 |  | Yet nothing is better at overcoming the hard and strong.
@@ -19,11 +24,6 @@ status: ready
 | 受国不祥           |  | The one who accepts its calamity
 | 是谓天下王         |  | Becomes king of the world.
 | 正言若反           |  | Truth seems contradictory.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
