--- a/lipu-nasin-pona/80.md
+++ b/lipu-nasin-pona/80.md
@@ -4,7 +4,12 @@ chapter: 80
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="80" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 小国寡民<wbr/>           |  | Let there be a small country with few people,
 | 使有什伯之器<wbr/>而不用 |  | Who, even having much machinery, don't use it.
@@ -15,11 +20,6 @@ status: ready
 | 甘其食<wbr/>美其服<wbr/>安其居<wbr/>乐其俗 |  | Sweeten their food, give them nice clothes, a peaceful abode and a relaxed life.
 | 邻国相望<wbr/>鸡犬之声相闻 |  | Even though the next country can be seen and its dogs and chickens can be heard,
 | 民至老死<wbr/>不相往来     |  | The people will grow old and die without visiting each other's land.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
