--- a/lipu-nasin-pona/01.md
+++ b/lipu-nasin-pona/01.md
@@ -5,23 +5,6 @@ title: lupa pi nasa pona ale
 status: done
 ---
 
-{:.loseta}
-|:-:|-|-
-| 道可道<wbr/>非常道 | nasin la, jan li ken nasin. taso la, ni li lon ala e nasin sewi. | The Way that can be followed is not the eternal Way.
-| 名可名<wbr/>非常名 | nimi la, jan li ken nimi. taso la, ni li lon ala e nimi sewi.    | The name that can be named is not the eternal name.
-| 无名<wbr/>天地之始 | ona pi jo ala e nimi la: sewi en ma li tan ni.                   | The nameless is the origin of heaven and earth
-| 有名<wbr/>万物之母 | ona pi jo nimi la: ijo ale li tan ni.                            | While naming is the origin of the myriad things.
-| 故常无欲<wbr/>以观其妙 | jan pi wile ala li lukin e wawa nasa.                        | Therefore, always desireless, you see the mystery
-| 常有欲<wbr/>以观其徵   | jan pi wile ale li lukin e ijo lon.                          | Ever desiring, you see the manifestations.
-| 此两者                 | tu ni la,                                                    | These two are the same—
-| 同出而异名             | ona li tan wan. taso, nimi ona li sama ala.                  | When they appear they are named differently.
-| 同谓之玄               | sama ni li seme.                                             | This sameness is the mystery,
-| 玄之又玄               | weka sona li sama ni.                                        | Mystery within mystery;
-| 众妙之门               | ni li open e nasa wawa mute.                                 | The door to all marvels.
-
--------
-{:#sitelen}
-
 jan li ken nasin e nasin. nasin ni li sama ala e nasin lon.
 jan li ken nimi e nimi. nimi ni li sama ala e nimi lon.
 ona pi nimi ala li tan e sewi li tan e ma.
@@ -39,5 +22,21 @@ sama ni li seme? weka sona li sama ni.
 
 ni li open e nasa wawa mute!
 {:sitelen data-sitelen-ratio="5"}
+
+{% include kasi-nav.html num=1 %}
+
+|:-:|-|-
+| 道可道<wbr/>非常道 | nasin la, jan li ken nasin. taso la, ni li lon ala e nasin sewi. | The Way that can be followed is not the eternal Way.
+| 名可名<wbr/>非常名 | nimi la, jan li ken nimi. taso la, ni li lon ala e nimi sewi.    | The name that can be named is not the eternal name.
+| 无名<wbr/>天地之始 | ona pi jo ala e nimi la: sewi en ma li tan ni.                   | The nameless is the origin of heaven and earth
+| 有名<wbr/>万物之母 | ona pi jo nimi la: ijo ale li tan ni.                            | While naming is the origin of the myriad things.
+| 故常无欲<wbr/>以观其妙 | jan pi wile ala li lukin e wawa nasa.                        | Therefore, always desireless, you see the mystery
+| 常有欲<wbr/>以观其徵   | jan pi wile ale li lukin e ijo lon.                          | Ever desiring, you see the manifestations.
+| 此两者                 | tu ni la,                                                    | These two are the same—
+| 同出而异名             | ona li tan wan. taso, nimi ona li sama ala.                  | When they appear they are named differently.
+| 同谓之玄               | sama ni li seme.                                             | This sameness is the mystery,
+| 玄之又玄               | weka sona li sama ni.                                        | Mystery within mystery;
+| 众妙之门               | ni li open e nasa wawa mute.                                 | The door to all marvels.
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
