--- a/lipu-nasin-pona/05.md
+++ b/lipu-nasin-pona/05.md
@@ -5,21 +5,6 @@ title: ilo pali kon
 status: done
 ---
 
-{:.loseta}
-|:-:|-|-
-| 天地不仁                | sewi en ma li olin ala e jan.              | Heaven and Earth are not humane,
-| 以万物为刍狗            | ona li lawa tawa ijo ale.                  | And regard the myriad things as straw dogs.
-| 圣人不仁                | jan sewi li olin ala e jan.                | The sage is not humane,
-| 以百姓为刍狗            | ona li lawa tawa jan ale.                  | And regards all the people as straw dogs.
-| 天地之间<wbr/>其犹橐籥乎 | insa ma en insa sewi li sama e ilo pali kon.      | The space between Heaven and Earth is just like a bellows:
-| 虚而不屈                | jan li weka e ona la, kin ona li ken jo.   | Empty it, it is not exhausted.
-| 动而愈出                | jan li pali e ona la, kin ona li ken pana. | Squeeze it and more comes out.
-| 多言数穷                | nimi mute li nanpa ike.                    | Excessive verbiage is usually a dead end
-| 不如守中                | pona la, awen e insa.                      | Is not as good as holding to the center.
-
--------
-{:#sitelen}
-
 sewi en ma li olin ala e jan.
 ona li lawa tawa ijo ale.
 jan sewi li olin ala e jan.
@@ -30,5 +15,19 @@ jan li pali e ona la, kin ona li ken pana.
 nimi mute li nanpa ike.
 pona la, awen e insa.
 {:sitelen data-sitelen-ratio="0.5"}
+
+{% include kasi-nav.html num=5 %}
+
+|:-:|-|-
+| 天地不仁                | sewi en ma li olin ala e jan.              | Heaven and Earth are not humane,
+| 以万物为刍狗            | ona li lawa tawa ijo ale.                  | And regard the myriad things as straw dogs.
+| 圣人不仁                | jan sewi li olin ala e jan.                | The sage is not humane,
+| 以百姓为刍狗            | ona li lawa tawa jan ale.                  | And regards all the people as straw dogs.
+| 天地之间<wbr/>其犹橐籥乎 | insa ma en insa sewi li sama e ilo pali kon.      | The space between Heaven and Earth is just like a bellows:
+| 虚而不屈                | jan li weka e ona la, kin ona li ken jo.   | Empty it, it is not exhausted.
+| 动而愈出                | jan li pali e ona la, kin ona li ken pana. | Squeeze it and more comes out.
+| 多言数穷                | nimi mute li nanpa ike.                    | Excessive verbiage is usually a dead end
+| 不如守中                | pona la, awen e insa.                      | Is not as good as holding to the center.
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
