--- a/lipu-nasin-pona/12.md
+++ b/lipu-nasin-pona/12.md
@@ -5,7 +5,19 @@ title: insa la, lukin ala
 status: done
 ---
 
-{:.loseta}
+kule ale li pakala e lukin.
+kalama ale li pakala e kute.
+namako ale li pakala e uta.
+tawa en alasa li pakala e lawa.
+ijo mani li pakala e pona jan.
+{:sitelen data-sitelen-ratio="3"}
+
+o pali tan insa, o pali ala tan lukin.
+o weka e ona, o anu e ni.
+{:sitelen data-sitelen-ratio="1"}
+
+{% include kasi-nav.html num=12 %}
+
 |:-:|-|-
 | 五色令人目盲                   | kule ale li pakala e lukin.            | The five colors blind our eyes.
 | 五音令人耳聋                   | kalama ale li pakala e kute.           | The five tones deafen our ears.
@@ -14,19 +26,6 @@ status: done
 | 难得之货<wbr/>令人行妨         | ijo mani li pakala e pona jan.         | Possessing rare treasures brings about harmful behavior.
 | 是以<wbr/>圣人为腹<wbr/>不为目 | o pali tan insa, o pali ala tan lukin. | Therefore the sage acts from his gut, and not from his eyes.
 | 故<wbr/>去彼取此               | o weka e ona, o _anu_ e ni.            | He lets go of that and chooses this.
-
--------
-{:#sitelen}
-
-kule ale li pakala e lukin.
-kalama ale li pakala e kute.
-namako ale li pakala e uta.
-tawa en alasa li pakala e lawa.
-ijo mani li pakala e pona jan.
-{:sitelen data-sitelen-ratio="0.2"}
-
-o pali tan insa, o pali ala tan lukin.
-o weka e ona, o anu e ni.
-{:sitelen data-sitelen-ratio="1.3"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
