--- a/lipu-nasin-pona/21.md
+++ b/lipu-nasin-pona/21.md
@@ -5,22 +5,22 @@ chapter: 21
 title: wawa suli
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="21" -%}
+{%endcomment%}
+
 |:-:|-|-
-| 孔德之容<wbr/>唯道是从 |  | The form of great virtue is something that only the Way can follow.
-| 道之为物<wbr/>唯恍唯惚 |  | The Way as a “thing” is only vague and obscure.
-| 忽兮恍兮<wbr/>其中有象 |  | How obscure! How vague! In it there is form.
-| 恍兮忽兮<wbr/>其中有物 |  | How vague! How obscure! In it are things.
-| 窈兮冥兮<wbr/>其中有精 |  | How deep! How dark! In it there is an essence.
-| 其精甚真<wbr/>其中有信 |  | The essence is so real— therein is belief.
+| 孔德之容<wbr/>唯道是从               |  | The form of great virtue is something that only the Way can follow.
+| 道之为物<wbr/>唯恍唯惚               |  | The Way as a “thing” is only vague and obscure.
+| 忽兮恍兮<wbr/>其中有象               |  | How obscure! How vague! In it there is form.
+| 恍兮忽兮<wbr/>其中有物               |  | How vague! How obscure! In it are things.
+| 窈兮冥兮<wbr/>其中有精               |  | How deep! How dark! In it there is an essence.
+| 其精甚真<wbr/>其中有信               |  | The essence is so real— therein is belief.
 | 自古及今<wbr/>其名不去<wbr/>以阅众甫 |  | From the present to antiquity, its name has never left it, so we can examine all origins.
-| 吾何以知众甫之状哉 |  | How do I know the form of all origins?
-| 以此 |  | By this.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+| 吾何以知众甫之状哉                   |  | How do I know the form of all origins?
+| 以此                                 |  | By this.
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
