--- a/lipu-nasin-pona/26.md
+++ b/lipu-nasin-pona/26.md
@@ -4,7 +4,12 @@ chapter: 26
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="26" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 重为轻根             |  | Heaviness is the root of lightness.
 | 静为躁君             |  | Composure is the ruler of instability.
@@ -17,11 +22,6 @@ status: ready
 | 而以身轻天下         |  | Be so concerned with himself as to ignore the people?
 | 轻则失本             |  | If you take them lightly you will lose your roots.
 | 躁则失君             |  | If you are unstable, you will lose your rulership.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
