--- a/lipu-nasin-pona/29.md
+++ b/lipu-nasin-pona/29.md
@@ -4,7 +4,12 @@ chapter: 29
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="29" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 将欲取天下而为之       |  | If you want to grab the world and run it
 | 吾见其不得已           |  | I can see that you will not succeed.
@@ -19,11 +24,6 @@ status: ready
 | 是以圣人去甚           |  | Hence, the sage shuns excess
 | 去奢                   |  | Shuns grandiosity
 | 去泰                   |  | Shuns arrogance.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
