--- a/lipu-nasin-pona/32.md
+++ b/lipu-nasin-pona/32.md
@@ -4,7 +4,12 @@ chapter: 32
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="32" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 道常无名       |  | The Way is always nameless.
 | 「朴虽小」     |  | (And even though a sapling might be small) [^1]
@@ -20,13 +25,8 @@ status: ready
 | 知止所以不殆   |  | Knowing where to stop, you can avoid trouble.
 | 譬道之在天下   |  | The Way's existence in the world
 | 犹川谷之与江海 |  | Is like valley streams running into the rivers and seas.
+{:.loseta}
 
 [^1] This triplet of characters may have been added by a later commenter?
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
 
 {% include sitelen-sitelen-renderer.html %}
