--- a/lipu-nasin-pona/36.md
+++ b/lipu-nasin-pona/36.md
@@ -5,7 +5,12 @@ title: suno lili...
 status: wip
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="36" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 将欲歙之     | <!--first ... suck thing-->  | That which will be shrunk
 | 必固张之     | <!--gotta def 张 thing-->    | Must first be stretched.
@@ -20,11 +25,6 @@ status: wip
 | 鱼不可脱于渊 |                              | A fish should not leave the depths of the waters.
 | 国之利器     |                              | The country's potent weapons
 | 不可以示人   |                              | Should not be shown to its people.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
