--- a/lipu-nasin-pona/50.md
+++ b/lipu-nasin-pona/50.md
@@ -4,12 +4,17 @@ chapter: 50
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="50" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 出生入死           |                 | Coming into life and entering death,
 | 生之徒<wbr/>十有三 |                 | The followers of life are three in ten.
 | 死之徒<wbr/>十有三 |                 | The followers of death are three in ten.
-| 人之生<wbr/>动之死地<wbr/>十有三 |   | Those whose life activity is their death ground are three in ten.
+| 人之生<wbr/>动之死地<wbr/>十有三 | ...  | Those whose life activity is their death ground are three in ten.
 | 夫何故             | ni li tan seme? | Why is this?
 | 以其生<wbr/>生之厚 |                 | Because they live life grasping for its rich taste.
 | 盖闻善摄生者       |                 | Now I have heard that those who are expert in handling life
@@ -20,11 +25,6 @@ status: ready
 | 兵无所容其刃       |                 | Weapons find no place to receive their sharp edges.
 | 夫何故             |                 | Why?
 | 以其无死地         |                 | Because he has no death-ground.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
