--- a/lipu-nasin-pona/61.md
+++ b/lipu-nasin-pona/61.md
@@ -4,7 +4,12 @@ chapter: 61
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="61" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 大国者下流             |  | The great state should be like a river basin.
 | 天下之交               |  | The mixing place of the world,
@@ -23,11 +28,6 @@ status: ready
 | 欲入事人               |  | Than to enter into the service of the right person.
 | 夫两者<wbr/>各得其所欲 |  | Thus both get what they want.
 | 大者宜为下             |  | Greatness lies in placing oneself below.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
