--- a/lipu-nasin-pona/69.md
+++ b/lipu-nasin-pona/69.md
@@ -4,7 +4,12 @@ chapter: 69
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="69" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 用兵有言             |  | Strategists have a saying:
 | 吾<wbr/>不敢为主<wbr/>而为客 |  | I prefer to be able to move, rather than be in a fixed position
@@ -19,11 +24,6 @@ status: ready
 | 故抗                 |  | Therefore
 | 兵相加               |  | When opponents clash
 | 哀者胜矣             |  | The one who is sorry about it will be the winner.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
