--- a/lipu-nasin-pona/72.md
+++ b/lipu-nasin-pona/72.md
@@ -4,7 +4,12 @@ chapter: 72
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="72" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 民不畏威 |  | When the people do not fear your might
 | 则大威至 |  | Then your might has truly become great.
@@ -17,11 +22,6 @@ status: ready
 | 不自贵 |  | But does not prize herself.
 | 故去彼 |  | Therefore she lets go of that
 | 取此 |  | And takes this.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
