--- a/lipu-nasin-pona/77.md
+++ b/lipu-nasin-pona/77.md
@@ -4,7 +4,12 @@ chapter: 77
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="77" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 天之道                 |  | The Way of Heaven
 | 其犹张弓与             |  | Is like stretching a bow.
@@ -23,11 +28,6 @@ status: ready
 | 是以圣人<wbr/>为而不侍 |  | Therefore the sage acts without expectation.
 | 功成而不处             |  | Does not abide in his accomplishments.
 | 其不欲见贤             |  | Does not want to show his virtue.
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
