--- a/lipu-nasin-pona/79.md
+++ b/lipu-nasin-pona/79.md
@@ -4,7 +4,12 @@ chapter: 79
 status: ready
 ---
 
-{:.loseta}
+{:sitelen data-sitelen-ratio="1"}
+
+{%comment%}
+{% include "kasi-nav.html" num="79" -%}
+{%endcomment%}
+
 |:-:|-|-
 | 和大怨               |  | After settling down for great anger
 | 必有馀怨             |  | There are always resentments left over.
@@ -15,15 +20,10 @@ status: ready
 | 无德司彻             |  | Those without virtue are concerned about it's being exacted. [^9]
 | 天道无亲             |  | The Heavenly Way has no favorites:
 | 常与善人             |  | It always raises up the Good[^10].
+{:.loseta}
 
 [^8]: Muller: "左契 literally means the “left side of the tally.” Ancient contracts in East Asia were made by writing the agreement on a wooden board that would be broken in half, and rematched when the contract had been fulfilled."
 [^9]: Muller: "The interpretation of 司契 and 司徹 here varies considerably among translators. We take it as one of the plethora of expressions of the pervasive notion of wu-wei in the Daodejing, which implies doing things by focusing on the content, and what one can actual do well, rather than on expectations of a rapid conclusion. Cf. the translations by D.C. Lau, Richard Llynn, Ellen Chen, John Wu, and others."
 [^10]: Muller: "Cf. Analects 4:10: The Master said: “When the noble man deals with the world he is not prejudiced for or against anything. He does what is Right.” 子曰。君子之於天下也、無適也、無莫也、義之與比。"
-
--------
-{:#sitelen}
-
-...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
 
 {% include sitelen-sitelen-renderer.html %}
