--- a/lipu-nasin-pona/81.md
+++ b/lipu-nasin-pona/81.md
@@ -5,23 +5,6 @@ title: jan pi lukin lipu li suno ala
 status: done
 ---
 
-{:.loseta}
-|:-:|-|-
-| 信言不美         | nimi lon li pona ala.                       | True words are not pretty.
-| 美言不信         | nimi pona li lon ala.                       | Pretty words are not true.
-| 善者不辩         | jan pona li utala ala.                      | The good are not argumentative.
-| 辩者不善         | jan utala li pona ala.                      | The argumentative are not good.
-| 知者不博         | jan suno li lukin ala e lipu.               | The one who really knows is not broadly learned,
-| 博者不知         | jan pi lukin lipu li suno ala.              | The broadly learned do not really know.
-| 圣人不积         | jan sewi li wile ala e ilo ale.             | The sage does not hoard,
-| 既以为人己愈有   | pali tawa jan ale la, jan li jo.            | She gives people her surplus.
-| 既以与人己愈多   | pana tawa jan ale la, jan li mute.          | Giving her surplus to others she is enriched.
-| 天之道利而不害   | nasin sewi la, jan li pona li pakala ala.   | The way of Heaven is to help and not harm.
-| 圣人之道为而不争 | nasin jan sewi la, jan li pali li wile ala. | The way of the Sage is to act without wrangling.
-
--------
-{:#sitelen}
-
 nimi lon li pona ala.
 nimi pona li lon ala.
 jan pona li utala ala.
@@ -38,5 +21,23 @@ pana tawa jan ale la jan li mute.
 nasin sewi la jan li pona li pakala ala.
 nasin jan sewi la jan li pali li wile ala.
 {:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{%comment%}
+{% include "kasi-nav.html" num="81" -%}
+{%endcomment%}
+
+|:-:|-|-
+| 信言不美         | nimi lon li pona ala.                       | True words are not pretty.
+| 美言不信         | nimi pona li lon ala.                       | Pretty words are not true.
+| 善者不辩         | jan pona li utala ala.                      | The good are not argumentative.
+| 辩者不善         | jan utala li pona ala.                      | The argumentative are not good.
+| 知者不博         | jan suno li lukin ala e lipu.               | The one who really knows is not broadly learned,
+| 博者不知         | jan pi lukin lipu li suno ala.              | The broadly learned do not really know.
+| 圣人不积         | jan sewi li wile ala e ilo ale.             | The sage does not hoard,
+| 既以为人己愈有   | pali tawa jan ale la, jan li jo.            | She gives people her surplus.
+| 既以与人己愈多   | pana tawa jan ale la, jan li mute.          | Giving her surplus to others she is enriched.
+| 天之道利而不害   | nasin sewi la, jan li pona li pakala ala.   | The way of Heaven is to help and not harm.
+| 圣人之道为而不争 | nasin jan sewi la, jan li pali li wile ala. | The way of the Sage is to act without wrangling.
+{:.loseta}
 
 {% include sitelen-sitelen-renderer.html %}
